@@ -375,35 +375,55 @@ task :rf => :rubyfiles
 
 # These tasks expect to have the following directory structure:
 #
-#   ruby/trunk # ruby subversion HEAD checkout
-#   rubygems/trunk # RubyGems subversion HEAD checkout
+#   git/git.rubini.us/code # Rubinius git HEAD checkout
+#   svn/ruby/trunk         # ruby subversion HEAD checkout
+#   svn/rubygems/trunk     # RubyGems subversion HEAD checkout
 #
-# If you don't have this directory structure, set RUBY_PATH.
+# If you don't have this directory structure, set RUBY_PATH and/or
+# RUBINIUS_PATH.
+
+diff_options = "-urpN --exclude '*svn*' --exclude '*swp' --exclude '*rbc'"
+rsync_options = "-avP --exclude '*svn*' --exclude '*swp' --exclude '*rbc' --exclude '*.rej' --exclude '*.orig'"
+
+rubinius_dir = ENV['RUBINIUS_PATH'] || '../../../git/git.rubini.us/code'
+ruby_dir = ENV['RUBY_PATH'] || '../../ruby/trunk'
 
 desc "Updates Ruby HEAD with the currently checked-out copy of RubyGems."
 task :update_ruby do
-  ruby_dir = ENV['RUBY_PATH'] || '../../ruby/trunk'
-
-  options = "-avP --exclude '*svn*' --exclude '*swp' --exclude '*rbc'"
-
-  sh "rsync #{options} bin/gem #{ruby_dir}/bin/gem"
-  sh "rsync #{options} lib/ #{ruby_dir}/lib"
-  sh "rsync #{options} test/ #{ruby_dir}/test/rubygems"
-  sh "rsync #{options} util/gem_prelude.rb #{ruby_dir}/gem_prelude.rb"
+  sh "rsync #{rsync_options} bin/gem #{ruby_dir}/bin/gem"
+  sh "rsync #{rsync_options} lib/ #{ruby_dir}/lib"
+  sh "rsync #{rsync_options} test/ #{ruby_dir}/test/rubygems"
+  sh "rsync #{rsync_options} util/gem_prelude.rb #{ruby_dir}/gem_prelude.rb"
 end
 
 desc "Diffs Ruby HEAD with the currently checked-out copy of RubyGems."
 task :diff_ruby do
-  ruby_dir = ENV['RUBY_PATH'] || '../../ruby/trunk'
-
   options = "-urpN --exclude '*svn*' --exclude '*swp' --exclude '*rbc'"
 
-  sh "diff #{options} bin/gem #{ruby_dir}/bin/gem; true"
-  sh "diff #{options} lib/ubygems.rb #{ruby_dir}/lib/ubygems.rb; true"
-  sh "diff #{options} lib/rubygems.rb #{ruby_dir}/lib/rubygems.rb; true"
-  sh "diff #{options} lib/rubygems #{ruby_dir}/lib/rubygems; true"
-  sh "diff #{options} lib/rbconfig #{ruby_dir}/lib/rbconfig; true"
-  sh "diff #{options} test #{ruby_dir}/test/rubygems; true"
-  sh "diff #{options} util/gem_prelude.rb #{ruby_dir}/gem_prelude.rb; true"
+  sh "diff #{diff_options} bin/gem #{ruby_dir}/bin/gem; true"
+  sh "diff #{diff_options} lib/ubygems.rb #{ruby_dir}/lib/ubygems.rb; true"
+  sh "diff #{diff_options} lib/rubygems.rb #{ruby_dir}/lib/rubygems.rb; true"
+  sh "diff #{diff_options} lib/rubygems #{ruby_dir}/lib/rubygems; true"
+  sh "diff #{diff_options} lib/rbconfig #{ruby_dir}/lib/rbconfig; true"
+  sh "diff #{diff_options} test #{ruby_dir}/test/rubygems; true"
+  sh "diff #{diff_options} util/gem_prelude.rb #{ruby_dir}/gem_prelude.rb; true"
 end
 
+desc "Updates Rubinius HEAD with the currently checked-out copy of RubyGems."
+task :update_rubinius do
+  sh "rsync #{rsync_options} bin/gem #{rubinius_dir}/lib/bin/gem.rb"
+  sh "rsync #{rsync_options} lib/ #{rubinius_dir}/lib"
+  sh "rsync #{rsync_options} test/ #{rubinius_dir}/test/rubygems"
+  sh "rsync #{rsync_options} util/gem_prelude.rb #{rubinius_dir}/kernel/core/gem_prelude.rb"
+end
+
+desc "Diffs Rubinius HEAD with the currently checked-out copy of RubyGems."
+task :diff_rubinius do
+  sh "diff #{diff_options} bin/gem #{rubinius_dir}/lib/bin/gem.rb; true"
+  sh "diff #{diff_options} lib/ubygems.rb #{rubinius_dir}/lib/ubygems.rb; true"
+  sh "diff #{diff_options} lib/rubygems.rb #{rubinius_dir}/lib/rubygems.rb; true"
+  sh "diff #{diff_options} lib/rubygems #{rubinius_dir}/lib/rubygems; true"
+  sh "diff #{diff_options} lib/rbconfig #{rubinius_dir}/lib/rbconfig; true"
+  sh "diff #{diff_options} test #{rubinius_dir}/test/rubygems; true"
+  sh "diff #{diff_options} util/gem_prelude.rb #{rubinius_dir}/kernel/core/gem_prelude.rb; true"
+end
